--- a/trunk/basement/css/stylesheet/screen.css
+++ b/trunk/basement/css/stylesheet/screen.css
@@ -259,7 +259,7 @@ input.submit {
 
 
 /*----------------------
-  eEd - eWeBuKi styles
+  eEd - eWeBuKi editor styles
   ----------------------*/
 
 #eEd {
