--- a/trunk/basement/templates/stylesheet/852881080.modify.tem.html
+++ b/trunk/basement/templates/stylesheet/852881080.modify.tem.html
@@ -18,7 +18,7 @@
   }
 //-->
 </script>
-<form method="POST" action="!#ausgaben_form_aktion" name="modify" id="eEd">
+<form method="POST" name="modify" action="!#ausgaben_form_aktion" id="eEd">
     <h1>#(ueberschrift)</h1>
     <p>#(inhalt)</p>
     <p>!#ausgaben_form_error</p>
