--- a/trunk/basement/templates/stylesheet/852881080.modify.tem.html
+++ b/trunk/basement/templates/stylesheet/852881080.modify.tem.html
@@ -3,12 +3,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15">
 <title>passed.modify</title>
-<link rel="stylesheet" href="../../css/default.css" type="text/css">
-<style type="text/css" media="screen">
-
-</style>
+<link rel="stylesheet" href="../../css/stylesheet/screen.css" type="text/css" media="screen">
 </head>
-<body bgcolor="#FFFFFF">
+<body>
 <!--##begin-->
 <!--$Id: 852881080.modify.tem.html 270 2004-11-08 21:47:05Z chaot $-->
 <script language="JavaScript">
