--- a/trunk/basement/css/stylesheet/screen.css
+++ b/trunk/basement/css/stylesheet/screen.css
@@ -278,7 +278,7 @@ input.submit {
         padding-left: 10px;
     }
 
-    #eEd input, textarea, select {
+    #eEd input, #eEd textarea, #eEd select {
         float: left;
         display: block;
         width: 250px;
@@ -288,6 +288,44 @@ input.submit {
         margin-top: 10px;
         margin-bottom: 10px;
         padding: 1px;
+    }
+
+    #eEd P {
+        float: left;
+        clear: both;
+        display: block;
+        width: 100%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        padding-left: 10px;
+    }
+
+    #eEd fieldset {
+        border: none;
+        padding-left: 137px;
+        padding-bottom: 10px;
+        display: block;
+        clear: both;
+    }
+
+    #eEd fieldset input {
+        width: auto;
+        border: none;
+        background: none;
+        float: left;
+        display: block;
+        margin-right: 10px;
+        margin-top: 3px !important;
+        margin-top: 0px; /*to fix ie6 position*/
+    }
+
+    #eEd fieldset label {
+        width: auto;
+        clear: none;
+        float: left;
+        display: block;
+        padding-right: 2px;
+        white-space: nowrap; /*to fix ie6 wrapping*/
     }
 
     #eEd .hidden {
