--- a/trunk/basement/templates/stylesheet/auth.logout.tem.html
+++ b/trunk/basement/templates/stylesheet/auth.logout.tem.html
@@ -1,16 +1,18 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>auth.logout</title>
 </head>
-<body bgcolor="#FFFFFF">
+<body>
 <!--##begin-->
-#(vorher) !#ausgaben_logout_meldung #(nachher) 
-<form style="margin:0; padding:0;" name="form1" method="post" action="!#ausgaben_auth_url">
-  <input type="submit" name="logout" value="logout">
+<p>#(vorher) !#ausgaben_logout_meldung #(nachher)</p>
+<form method="post" action="!#ausgaben_auth_url">
+    <div>
+        <input type="submit" name="logout" value="logout" />
+    </div>
 </form>
-!#ausgaben_logout_rechte 
+<p>!#ausgaben_logout_rechte</p>
 <!--##end-->
 </body>
 </html>
