--- a/trunk/basement/templates/stylesheet/auth.tem.html
+++ b/trunk/basement/templates/stylesheet/auth.tem.html
@@ -1,14 +1,13 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15" />
 <title>auth</title>
 </head>
-<body bgcolor="#FFFFFF">
+<body>
 <!--##begin-->
 <h3>#(ueberschrift)</h3>
-!#ausgaben_auth</td>
+!#ausgaben_auth
 <!--##end-->
 </body>
 </html>
-
