ed css infos jetzt in eigener datei

--- a/trunk/basement/css/stylesheet/screen.css
+++ b/trunk/basement/css/stylesheet/screen.css
@@ -1,5 +1,7 @@
 /* project: eWeBuKi stylesheet template
-   based on a design from: luka cvrk (www.solucija.com) */
+   based on a design from: luka cvrk (www.solucija.com).
+
+   $Id$ */
 
 
 
@@ -256,162 +258,6 @@ input.submit {
     color: #737373;
     background: inherit;
     font-weight: bold;
-}
-
-/* ---------------------*/
-
-
-
-/*----------------------
-  eEd - eWeBuKi editor styles
-  ----------------------*/
-
-#eEd {
-    background: #EFEFEF;
-    width: 100%;
-/*     border: 1px dotted #333; */
-}
-
-    #eEd label {
-        float: left;
-        clear: both;
-        display: block;
-        width: 150px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        padding-left: 10px;
-    }
-
-    #eEd input, #eEd textarea, #eEd select {
-        float: left;
-        display: block;
-        width: 250px;
-        border: 1px solid #333;
-        background:#F4F4F4;
-        font-size: 12px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        padding: 1px;
-    }
-
-    #eEd P {
-        float: left;
-        clear: both;
-        display: block;
-        width: 100%;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        padding-left: 10px;
-    }
-
-    #eEd fieldset {
-        border: none;
-        padding-left: 137px;
-        padding-bottom: 10px;
-        display: block;
-        clear: both;
-    }
-
-    #eEd fieldset input {
-        width: auto;
-        border: none;
-        background: none;
-        float: left;
-        display: block;
-        margin-right: 10px;
-        margin-top: 3px !important;
-        margin-top: 0px; /*to fix ie6 position*/
-    }
-
-    #eEd fieldset label {
-        width: auto;
-        clear: none;
-        float: left;
-        display: block;
-        padding-right: 2px;
-        white-space: nowrap; /*to fix ie6 wrapping*/
-    }
-
-    #eEd .hidden {
-        border: 0px;
-    }
-
-    #eEd .first {
-        margin-left: 160px !important;
-        margin-left: 80px; /*to fix IE6 position*/
-        width: 120px;
-        clear:both;
-    }
-
-    #eEd .next {
-        margin-left: 10px !important;
-        margin-left: 7px; /*to fix IE6 position*/
-        width: 100px;
-    }
-
-    #eEd .thumbs {
-        border: 1px solid silver;
-        float: left;
-        height: 130px;
-        margin: 5px;
-        width: 102px;
-        text-align: center;
-        padding: 3px;
-        -moz-border-radius: 5px;
-}
-    #eEd .thumbs a.pic {
-        display: block;
-        height: 100px;
-        margin: 0 auto;
-        width: 96px;
-}
-
-    /*clearing all floats and fix Firefox and IE backgroundcolor-bug */
-    div.clearer {
-        clear: both;
-        font-size: 1px;
-        line-height: 1px;
-        display: block;
-        height: 1px;
-    }
-
-/* ---------------------*/
-
-
-
-
-
-
-/*----------------------
-  cms edit test
-  ----------------------*/
-
-.buttag {
-    border: 1px solid #ddd;
-    padding: .5ex 1ex;
-    background-color: #fff;
-    text-decoration: none;
-    cursor: default;
-}
-
-.butoth {
-    border: 1px solid #ddd;
-    border-style: solid;
-    margin: 0 0 0 0;
-    padding: 0.2ex 0.2ex 0.2ex 0.2ex;
-    background-color: #fff;
-    text-decoration: none;
-/*     font: 0.9em Tahoma, sans-serif; */
-/*     cursor: default; */
-}
-
-.field {
-    width: 100%;
-    border: 1px solid #ddd;
-/*     margin: 0 0 1ex 0; */
-/*     padding: .5ex 1ex; */
-    background-color: #eee;
-    text-decoration: none;
 }
 
 /* ---------------------*/
