--- a/trunk/basement/templates/stylesheet/kontakt.tem.html
+++ b/trunk/basement/templates/stylesheet/kontakt.tem.html
@@ -4,48 +4,47 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15">
 <title>kontakt</title>
 <link rel="stylesheet" href="../../css/stylesheet/screen.css" type="text/css" media="screen">
+<link rel="stylesheet" href="../../css/stylesheet/eed.css" type="text/css" media="screen">
 </head>
 <body>
 <!--##begin-->
-<!--$Id: kontakt.tem.html 416 2006-07-26 08:56:05Z chaot $-->
+<!--$Id$-->
 <form method="POST" name="modify" action="!#ausgaben_form_aktion" id="eEd">
     <h1>#(ueberschrift)</h1>
     <p>#(inhalt)</p>
     <p>!#ausgaben_form_error</p>
-    <div class="elements">
-        <fieldset>
-            !#element_betreff
-        </fieldset>
-        <label for="firma">g(firma)</label>
-        !#element_firma
-        <label for="branche">g(branche)</label>
-        !#element_branche
-        <label for="ansprechpartner">g(ansprechpartner)</label>
-        !#element_ansprechpartner
-        <label for="strasse">g(strasse)</label>
-        !#element_strasse
-        <label for="plz">g(plz)</label>
-        !#element_plz
-        <label for="ort">g(ort)</label>
-        !#element_ort
-        <label for="telefon">g(telefon)</label>
-        !#element_telefon
-        <label for="fax">g(fax)</label>
-        !#element_fax
-        <label for="e-mail">g(e-mail)</label>
-        !#element_e-mail
-        <label for="mitteilung">g(mitteilung)</label>
-        !#element_mitteilung
-        <p>#(zusatz)</p>
-        <input name="form_referer" type="hidden" value="!#ausgaben_form_referer" class="hidden" />
-        <div class="clearer">&nbsp;</div>
-        <input type="submit" name="send[]" value="g(send)" class="first" />
-        <input type="reset" name="reset" value="g(reset)" class="next" />
-        <input type="button" name="abort" value="g(abort)" onClick="location='!#ausgaben_form_break'" class="next" />
-        <div class="clearer">&nbsp;</div>
+    <fieldset class="cbra">
+        !#element_betreff
+    </fieldset>
+    <label for="firma">g(firma)</label>
+    !#element_firma
+    <label for="branche">g(branche)</label>
+    !#element_branche
+    <label for="ansprechpartner">g(ansprechpartner)</label>
+    !#element_ansprechpartner
+    <label for="strasse">g(strasse)</label>
+    !#element_strasse
+    <label for="plz">g(plz)</label>
+    !#element_plz
+    <label for="ort">g(ort)</label>
+    !#element_ort
+    <label for="telefon">g(telefon)</label>
+    !#element_telefon
+    <label for="fax">g(fax)</label>
+    !#element_fax
+    <label for="e-mail">g(e-mail)</label>
+    !#element_e-mail
+    <label for="mitteilung">g(mitteilung)</label>
+    !#element_mitteilung
+    <p>#(zusatz)</p>
+    <input name="form_referer" type="hidden" value="!#ausgaben_form_referer" class="hidden" />
+    <div class="clearer">&nbsp;</div>
+    <input type="submit" name="send[]" value="g(send)" class="first" />
+    <input type="reset" name="reset" value="g(reset)" class="next" />
+    <input type="button" name="abort" value="g(abort)" onClick="location='!#ausgaben_form_break'" class="next" />
+    <div class="clearer">&nbsp;</div>
     <p>!#ausgaben_output</p>
     <p>!#ausgaben_inaccessible</p>
-    </div>
 </form>
 <!--##end-->
 </body>
