--- a/trunk/basement/css/stylesheet/eed.css
+++ b/trunk/basement/css/stylesheet/eed.css
@@ -1,4 +1,4 @@
-/* project: eWeBuKi stylesheet template for all Ed's
+/* project: eWeBuKi stylesheet template for eWeBuKi editor (eEd's) styles
    based on a design from: luka cvrk (www.solucija.com)
 
    $Id$ */
@@ -6,74 +6,96 @@
 
 
 /*----------------------
-  eEd - eWeBuKi editor styles
+  default styles
   ----------------------*/
 
 #eEd {
     background: #EFEFEF;
     width: 100%;
-/*     border: 1px dotted #333; */
+    border: 1px dotted #333;
 }
 
-    #eEd label {
-        float: left;
-        clear: both;
-        display: block;
-        width: 150px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        padding-left: 10px;
-    }
+#eEd ul {
 
-    #eEd input, #eEd textarea, #eEd select {
-        float: left;
-        display: block;
-        width: 250px;
-        border: 1px solid #333;
-        background:#F4F4F4;
-        font-size: 12px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        padding: 1px;
-    }
+    color: #FFFFFF;
+}
 
-    #eEd P {
-        float: left;
-        clear: both;
-        display: block;
-        width: 100%;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        padding-left: 10px;
-    }
 
-    #eEd fieldset {
-        border: none;
-        padding-left: 137px;
-        padding-bottom: 10px;
-        display: block;
-        clear: both;
-    }
+#eEd label {
+    float: left;
+    display: block;
+    clear: both;
+    width: 150px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-left: 10px;
+}
 
-    #eEd fieldset input {
-        width: auto;
-        border: none;
-        background: none;
-        float: left;
-        display: block;
-        margin-right: 10px;
-        margin-top: 3px !important;
-        margin-top: 0px; /*to fix ie6 position*/
-    }
+#eEd input, #eEd textarea, #eEd select {
+    float: left;
+    display: block;
+    width: 250px;
+    border: 1px solid #333;
+    background:#F4F4F4;
+    font-size: 12px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 1px;
+}
 
-    #eEd fieldset label {
-        width: auto;
-        clear: none;
-        float: left;
-        display: block;
-        padding-right: 2px;
-        white-space: nowrap; /*to fix ie6 wrapping*/
-    }
+#eEd p {
+    float: left;
+    clear: both;
+    display: block;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-left: 10px;
+}
+
+/* ---------------------*/
+
+
+
+/*----------------------
+  checkbox, radio group
+  ----------------------*/
+
+#eEd fieldset.cbra {
+    border: none;
+    padding-left: 137px;
+    padding-bottom: 10px;
+    display: block;
+    clear: both;
+}
+
+#eEd fieldset.cbra input {
+    width: auto;
+    border: none;
+    background: none;
+    float: left;
+    display: block;
+    margin-right: 10px;
+    margin-top: 3px !important;
+    margin-top: 0px; /*to fix ie6 position*/
+}
+
+#eEd fieldset.cbra label {
+    width: auto;
+    clear: none;
+    float: left;
+    display: block;
+    padding-right: 2px;
+    white-space: nowrap; /*to fix ie6 wrapping*/
+}
+
+/* ---------------------*/
+
+
+
+/*----------------------
+  global modifiers
+  ----------------------*/
 
     #eEd .hidden {
         border: 0px;
@@ -92,7 +114,32 @@
         width: 100px;
     }
 
-    #eEd .thumbs {
+/* ---------------------*/
+
+
+
+/*----------------------
+  spezial reset
+  ----------------------*/
+
+/*clearing all floats and fix Firefox and IE backgroundcolor-bug */
+div.clearer {
+    clear: both;
+    font-size: 1px;
+    line-height: 1px;
+    display: block;
+    height: 1px;
+}
+
+/* ---------------------*/
+
+
+
+/*----------------------
+  fileed special
+  ----------------------*/
+
+ul.thumbs {
         border: 1px solid silver;
         float: left;
         height: 130px;
@@ -102,31 +149,21 @@
         padding: 3px;
         -moz-border-radius: 5px;
 }
-    #eEd .thumbs a.pic {
+
+ul.thumbs a.pic {
         display: block;
         height: 100px;
         margin: 0 auto;
         width: 96px;
 }
 
-    /*clearing all floats and fix Firefox and IE backgroundcolor-bug */
-    div.clearer {
-        clear: both;
-        font-size: 1px;
-        line-height: 1px;
-        display: block;
-        height: 1px;
-    }
-
 /* ---------------------*/
 
 
 
 
-
-
 /*----------------------
-  cms edit test
+  cmsed special (testing only)
   ----------------------*/
 
 .buttag {
