--- a/trunk/basement/css/stylesheet/eed.css
+++ b/trunk/basement/css/stylesheet/eed.css
@@ -136,6 +136,25 @@ div.clearer {
 
 
 /*----------------------
+  menued special
+  ----------------------*/
+
+ul.menued {
+    padding: 0pt 0pt 0pt 20pt;
+}
+li.menued {
+    border-top: 1px solid #ddd;
+    list-style : none;
+}
+li.menued a{
+    text-decoration:none;
+}
+
+/* ---------------------*/
+
+
+
+/*----------------------
   fileed special
   ----------------------*/
 
