--- a/trunk/basement/css/stylesheet/eed.css
+++ b/trunk/basement/css/stylesheet/eed.css
@@ -114,6 +114,25 @@
         width: 100px;
     }
 
+    #eEd fieldset {
+        border:none;
+        margin:10px;
+        padding:0;
+    }
+
+    #eEd .float label {
+        clear:none;
+        float:left;
+        margin:0;
+        padding-left:20px;
+        width:200px;
+    }
+
+    #eEd .float input, #eEd .float textarea, #eEd .float select {
+        margin-top:0;
+        width:200px;
+    }
+
 /* ---------------------*/
 
 
