--- a/trunk/basement/templates/stylesheet/210295197.modify.tem.html
+++ b/trunk/basement/templates/stylesheet/210295197.modify.tem.html
@@ -21,14 +21,14 @@
     <p>!#ausgaben_form_error</p>
     <div class="clearer">&nbsp;</div>
     <fieldset class="float">
-        <label for="username">#(username)
-            !#element_username
+        <label for="vorname">#(vorname)
+            !#element_vorname
         </label>
         <label for="nachname">#(nachname)
             !#element_nachname
         </label>
-        <label for="vorname">#(vorname)
-            !#element_vorname
+        <label for="username">#(username)
+            !#element_username
         </label>
         <label for="email">#(email)
             !#element_email
@@ -45,6 +45,7 @@
                 <option value="!{id}"!{sel}>!{level}</option>
                 <!--##cont-->
             </select>
+            <input type="submit" value="#(del)" name="del"/>
         </label>
         <label>#(avail)
             <select name="avail[]" size="10" multiple="multiple">
@@ -52,15 +53,16 @@
                 <option value="!{id}"!{sel}>!{level}</option>
                 <!--##cont-->
             </select>
+            <input type="submit" value="#(add)" name="add"/>
         </label>
     </fieldset>
-    <input type="submit" value="#(del)" name="del"/>
-    <input type="submit" value="#(add)" name="add"/>
-    <input name="form_referer" type="hidden" value="!#ausgaben_form_referer" class="hidden" />
-    <div class="clearer">&nbsp;</div>
-    <input type="submit" name="send" value="g(send)" class="first" />
-    <input type="reset" name="reset" value="g(reset)" class="next" onclick="resetForm()" />
-    <input type="button" name="cancel" value="g(abort)" onclick="location='!#ausgaben_form_break'" class="next" />
+    <fieldset>
+        <input name="form_referer" type="hidden" value="!#ausgaben_form_referer" class="hidden" />
+        <div class="clearer">&nbsp;</div>
+        <input type="submit" name="send" value="g(send)" class="next" />
+        <input type="reset" name="reset" value="g(reset)" class="next" onclick="resetForm()" />
+        <input type="button" name="cancel" value="g(abort)" onclick="location='!#ausgaben_form_break'" class="next" />
+    </fieldset>
 
     <div class="clearer">&nbsp;</div>
 
@@ -68,5 +70,10 @@
     <p>!#ausgaben_inaccessible</p>
 </form>
 <!--##end-->
-    </body>
+<p>
+    <a href="http://validator.w3.org/check?uri=referer">
+        <img src="http://www.w3.org/Icons/valid-xhtml10-blue" alt="Valid XHTML 1.0 Strict" height="31" width="88" />
+    </a>
+</p>
+</body>
 </html>
