--- a/trunk/basement/css/stylesheet/eed.css
+++ b/trunk/basement/css/stylesheet/eed.css
@@ -22,7 +22,7 @@
     width: 150px;
     margin-top: 10px;
     margin-bottom: 10px;
-    padding-left: 10px;
+    padding-left: 40px;
 }
 
 #eEd input, #eEd textarea, #eEd select {
@@ -47,7 +47,6 @@
 
 #eEd fieldset{
     border:none;
-    border:none;
     margin:10px;
     padding:0 0 0 20px;
 }
@@ -65,7 +64,7 @@
     }
 
     #eEd .first {
-        margin-left: 160px !important;
+        margin-left: 40px !important;
         margin-left: 80px; /*to fix IE6 position*/
         width: 120px;
         clear:both;
@@ -103,7 +102,7 @@ div.clearer {
   ----------------------*/
 
 #eEd fieldset.cbra {
-    border: none;
+/*     border: none; */
     padding-left: 137px;
     padding-bottom: 10px;
     display: block;
@@ -112,7 +111,7 @@ div.clearer {
 
 #eEd fieldset.cbra input {
     width: auto;
-    border: none;
+/*     border: none; */
     background: none;
     float: left;
     display: block;
@@ -138,20 +137,21 @@ div.clearer {
   floating input, 2lines
   ----------------------*/
 
-    #eEd fieldset.float {
-        border:none;
-    }
+/*     #eEd fieldset.float { */
+/*         border:none; */
+/*     } */
 
     #eEd fieldset.float label {
-        clear:none;
-        float:left;
-        margin:0;
-        width:200px;
+        clear: none;
+        float: left;
+        margin: 0;
+        padding-left: 10px;
+        width: 200px;
     }
 
     #eEd fieldset.float input, #eEd fieldset.float textarea, #eEd fieldset.float select {
-        margin-top:0;
-        width:200px;
+        margin-top: 0;
+        width: 200px;
     }
 
 /* ---------------------*/
